# mview_web

./: .gitignore  Cargo.toml  cargorun.sh  cert.pem  key.pem  mview_web.conf  mview_web.conf.sample
src/: main.rs
src/comm/: db_postgres.rs  mod.rs  util.rs
src/routes/: common.rs  html_view.rs  mdan_10_ar.rs  mod.rs
static/: webix_ckeditor4.js
view/: mdan_10_ar.html  mdan_10_ar.js  test.html
