[package]
name = "mview_web"
version = "0.1.0"
authors = ["mandubimil <mandubimil@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = { version="2.0.0", features=["openssl"] }
actix-rt = "1.1.1"
env_logger = "0.7.1"

tera = "1.5.0"
actix-files = "0.2.2"
json = "0.12.4"
bytes = "0.5.6"
serde_json = "1.0"

r2d2 = "0.8.9"
postgres = "0.17.5"
r2d2_postgres = "0.16.0"

actix-session = "0.3.0"
openssl = "0.10.30"

futures = "0.3.5"
futures-util = "0.3.5"
futures-macro = "0.3.5"
